@@ -38,6 +38,8 @@ BETA PUBLIC RELEASE VERSION 0.3.3       XX-XX-XX
     * Fixed a bug in vpmg.c that caused an assertion error when writing
       out laplacian maps (Thanks to Vincent Chu).
 	* Removed a spurious error estimation in finite element calculations.
+	* Clarified the role of ccf and other variables in mypde.f and vpmg.c by
+      expanding/revising the inline comments.
 
 #############################################################################
 BETA PUBLIC RELEASE VERSION 0.3.2       11-10-04
